--- a/src/components/MapComponent/Map.css
+++ b/src/components/MapComponent/Map.css
@@ -77,3 +77,17 @@
   cursor: pointer;
   transition: background-color 0.2s ease;
 }
+
+.delete-button {
+  width: auto;
+  height: 1rem;
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+.delete-button:hover {
+  background-color: #c82333;
+}
